Added integration tests for MovieService