@@ -9,13 +9,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.kinozov.DTO.MovieDTO;
 import ru.kinozov.DTO.MovieListDTO;
-import ru.kinozov.DTO.ReviewDTO;
+import ru.kinozov.DTO.ReviewInputDTO;
+import ru.kinozov.DTO.ReviewOutputDTO;
 import ru.kinozov.config.MyUserDetails;
 import ru.kinozov.entities.Movie;
 import ru.kinozov.entities.MyUser;
 import ru.kinozov.entities.Review;
 import ru.kinozov.mappers.MovieDTOMapper;
 import ru.kinozov.mappers.MovieListDTOMapper;
+import ru.kinozov.mappers.ReviewInputDTOToReviewMapper;
 import ru.kinozov.repositories.MovieRepository;
 import ru.kinozov.repositories.ReviewRepository;
 import ru.kinozov.repositories.UserRepository;
@@ -35,8 +37,10 @@ public class MovieService {
     private final ReviewDTOMapper reviewDTOMapper;
     private final ReviewRepository reviewRepository;
     private final UserRepository userRepository;
+    private final ReviewInputDTOToReviewMapper reviewInputDTOToReviewMapper;
 
-    public List<MovieListDTO> listMovies(Integer from, Integer limit, String sort) {
+    @Transactional
+    public List<MovieListDTO> getMovies(Integer from, Integer limit, String sort) {
         if (from == null) {
             from = 0;
         }
@@ -49,20 +53,62 @@ public class MovieService {
         if (sort == null) {
             sort = "releaseDate";
         }
+        else if (sort.equals("alphabet")) {
+            sort = "title";
+        }
+
+        int toIndex;
+
+        if (from + limit > movieRepository.count()) {
+            toIndex = (int) movieRepository.count();
+        }
+        else {
+            toIndex = from + limit;
+        }
 
         return movieRepository.findAll(
-                PageRequest.of(from, limit, Sort.by(Sort.Direction.DESC, sort))).stream()
+                PageRequest.of(0, from + limit, Sort.by(Sort.Direction.DESC, sort))).
+                getContent().subList(from, toIndex).stream()
                 .map(movieListDTOMapper).collect(Collectors.toList());
     }
 
+    @Transactional
     public MovieDTO getMovieById(Integer id) {
         return movieRepository.findById(id).map(movieDTOMapper).orElse(null);
     }
 
-    public List<ReviewDTO> listReviews(Integer id) {
+    @Transactional
+    public List<ReviewOutputDTO> getReviews(Integer id, Integer from, Integer limit) {
+        if (from == null) {
+            from = 0;
+        }
+        if (from > reviewRepository.count()) {
+            return new ArrayList<>();
+        }
+        if (limit == null) {
+            limit = 10;
+        }
+
+        int toIndex;
+
+        if (from + limit > reviewRepository.count()) {
+            toIndex = (int) reviewRepository.count();
+        }
+        else {
+            toIndex = from + limit;
+        }
+
         return movieRepository.findById(id).orElse(null).getReviews().stream()
                 .map(reviewDTOMapper)
-                .toList();
+                .sorted((e1, e2) -> {
+                    if (e1.getCreatedAt().isBefore(e2.getCreatedAt())) {
+                        return -1;
+                    } else if (e1.getCreatedAt().isAfter(e2.getCreatedAt())) {
+                        return 1;
+                    }
+                    return 0;
+                })
+                .collect(Collectors.toList()).subList(from, toIndex);
     }
 
     private int getCurrentSessionUserId() {
@@ -72,7 +118,9 @@ public class MovieService {
     }
 
     @Transactional
-    public Integer saveReview(Integer movieId, Review review) {
+    public Integer createReview(Integer movieId, ReviewInputDTO reviewInputDTO) {
+        Review review = reviewInputDTOToReviewMapper.apply(reviewInputDTO);
+
         review.setCreatedAt(LocalDateTime.now());
 
         MyUser user = userRepository.findById(getCurrentSessionUserId()).get();
